--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/AccountSpec.js"></script>
+  <script src="spec/features/AccountFeatureSpec.js"></script>
 
 </head>
 
