--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here... -->
   <script src="src/Account.js"></script>
+  <script src="src/Transaction.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/AccountSpec.js"></script>
