added getAccountStatement function

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/AccountSpec.js"></script>
+  <script src="spec/TransactionSpec.js"></script>
   <script src="spec/features/AccountFeatureSpec.js"></script>
 
 </head>
