--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="src/Account.js"></script>
   <script src="src/Transaction.js"></script>
+  <script src="src/DateToday.js"></script>  
 
   <!-- include spec files here... -->
   <script src="spec/AccountSpec.js"></script>
